--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <i class="stop-button fa fa-pause"></i>
 <div class="video-fall"></div>
 <video id="video" autoplay loop>
-<source src="http://natzu.kim/media/Harmful Logic - Never Ends.mp4" type="video/mp4"/>
+<source src="/videos/videonew.mp4" type="video/mp4"/>
 Your browser does not support the video tag. I suggest you upgrade your browser.
 </video>
 <canvas class="cover"></canvas>
