--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <i class="stop-button fa fa-pause"></i>
 <div class="video-fall"></div>
 <video id="video" autoplay loop>
-<source src="videos/videonew.mp4" type="video/mp4"/>
-Your browser does not support the video tag. I suggest you upgrade your browser.
+<source src="videos/video.mp4" type="video/mp4"/>
+Your browser sucks. Better to upgrade your browser.
 </video>
 <canvas class="cover"></canvas>
 </div>
