--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <i class="stop-button fa fa-pause"></i>
 <div class="video-fall"></div>
 <video id="video" autoplay loop>
-<source src="videos/video.mp4" type="video/mp4"/>
+<source src="videos/newvideo.mp4" type="video/mp4"/>
 Your browser sucks. Better to upgrade your browser.
 </video>
 <canvas class="cover"></canvas>
