--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="video-fall"></div>
 <video id="video" autoplay loop>
 <source src="videos/newvideo.mp4" type="video/mp4"/>
-Your browser sucks. Better to upgrade your browser.
+Your browser sucks. Better to upgrade him.
 </video>
 <canvas class="cover"></canvas>
 </div>
@@ -68,9 +68,12 @@ Your browser sucks. Better to upgrade your browser.
 <div class="lightbox">
 <div class="awrapper">
 <div class="titles fadeInDown">
-<h1>tajiri'</h1>
+<h1>tajiri</h1>
 </div>
 <div class="media fadeInUp">
+<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
+<i class=" "></i>
+</a>
 <a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
 <i class="fa fa-steam"></i>
 </a>
