--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Your browser sucks. Better to upgrade him.
 <h1>tajiri</h1>
 </div>
 <div class="media fadeInUp">
-<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
+<a href="just a positon, no idea what's wrong with core css" target=_blank"">
 <i class=" "></i>
 </a>
 <a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
