--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <script src="js/plugins.min.js"></script>
 <script src="js/main.js"></script>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h1{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
+<style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h2{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
+<style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h3{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
+<style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h4{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
 <script> 
 	document.onkeydown = function(e) { 
 	if (e.ctrlKey && (e.keyCode === 67 || e.keyCode === 86 || e.keyCode === 85 || e.keyCode === 117)) {//Alt+c, Alt+v will also be disabled sadly. 
@@ -88,7 +91,9 @@ Your browser sucks. Better to upgrade him.
 </a>
 <div class="media fadeInUp">
 <br>
-<a href="https://vk.com/djksflszkjha" id="vk" target="_blank">
+<a href="just a positon, no idea what's wrong with core css" target=_blank"">
+<i class=" "></i>
+</a><a href="https://vk.com/djksflszkjha" id="vk" target="_blank">
 <i class="fa fa-vk"></i>
 </a>
 <a href="http://steamcommunity.com/profiles/76561197962192573" target=_blank"">
@@ -97,6 +102,13 @@ Your browser sucks. Better to upgrade him.
 <a href="https://shikimori.org/tajiri/" target="_blank">
 <i class="fa fa-github-alt"></i>
 </a>
+<a>
+<div class="titles fadeInUp">
+
+<h3>there's no god in our world</h3>
+</div>
+</a>
+</div>
 </div>
 </div>
 </div>
