--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -102,12 +101,24 @@ Your browser sucks. Better to upgrade him.
 <a href="https://shikimori.org/tajiri/" target="_blank">
 <i class="fa fa-github-alt"></i>
 </a>
+
 <a>
 <div class="titles fadeInUp">
-
-<h3>there's no god in our world</h3>
+<h3><script language="JavaScript">
+<!--
+var r_text = new Array ();
+r_text[0] = "there's no god in our world";
+r_text[1] = "the day will come when the sky will turn bloody";
+r_text[2] = "very soon the angels will descend from heaven";
+r_text[3] = "no one escapes the punishment of heaven";
+r_text[4] = "gl hf";
+var i = Math.floor(5*Math.random())
+document.write(r_text[i]);
+//-->
+</script></h3>
 </div>
 </a>
+	
 </div>
 </div>
 </div>
