--- a/index.html
+++ b/index.html
@@ -72,54 +72,57 @@ Your browser sucks. Better to upgrade him.
 <div class="titles fadeInDown">
 <h1>tajiri</h1>
 </div>
-<div class="media fadeInUp">
-<a href="just a positon, no idea what's wrong with core css" target=_blank"">
-<i class=" "></i>
-</a>
-<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
-<i class="fa fa-steam"></i>
-</a>
-<a href="https://www.twitch.tv/xtajiri" target="_blank">
-<i class="fa fa-twitch"></i>
-</a>
-<a href="https://www.youtube.com/channel/UC-lhxXhWxXI_rurOXpN_17g" target="_blank">
-<i class="fa fa-youtube"></i>
-</a>
-<a href="https://myanimelist.net/profile/Tajiri" target="_blank">
-<i class="fa fa-heart-o"></i>
-</a>
-<div class="media fadeInUp">
-<br>
-<a href="just a positon, no idea what's wrong with core css" target=_blank"">
-<i class=" "></i>
-</a><a href="https://vk.com/djksflszkjha" id="vk" target="_blank">
-<i class="fa fa-vk"></i>
-</a>
-<a href="http://steamcommunity.com/profiles/76561197962192573" target=_blank"">
-<i class="fa fa-steam-square"></i>
-</a>
-<a href="https://shikimori.org/tajiri/" target="_blank">
-<i class="fa fa-github-alt"></i>
-</a>
-
-<a>
-<div class="titles fadeInUp">
-<h3><script language="JavaScript">
-<!--
-var r_text = new Array ();
-r_text[0] = "there's no god in our world";
-r_text[1] = "the day will come when the sky will turn bloody";
-r_text[2] = "very soon the angels will descend from heaven";
-r_text[3] = "no one escapes the punishment of heaven";
-r_text[4] = "gl hf";
-var i = Math.floor(5*Math.random())
-document.write(r_text[i]);
-//-->
-</script></h3>
-</div>
-</a>
+	<div class="media fadeInDown">
+		<a href="just a positon, no idea what's wrong with core css" target=_blank"">
+		<i class=" "></i>
+		</a>
+		<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
+		<i class="fa fa-steam"></i>
+		</a>
+		<a href="https://www.twitch.tv/xtajiri" target="_blank">
+		<i class="fa fa-twitch"></i>
+		</a>
+		<a href="https://www.youtube.com/channel/UC-lhxXhWxXI_rurOXpN_17g" target="_blank">
+		<i class="fa fa-youtube"></i>
+		</a>
+		<a href="https://myanimelist.net/profile/Tajiri" target="_blank">
+		<i class="fa fa-heart-o"></i>
+		</a>
 	
-</div>
+	<div class="media fadeInUp">
+	<br>
+		<a href="just a positon, no idea what's wrong with core css" target=_blank"">
+		<i class=" "></i>
+		</a>
+		<a href="https://vk.com/djksflszkjha" id="vk" target="_blank">
+		<i class="fa fa-vk"></i>
+		</a>
+		<a href="http://steamcommunity.com/profiles/76561197962192573" target=_blank"">
+		<i class="fa fa-steam-square"></i>
+		</a>
+		<a href="https://shikimori.org/tajiri/" target="_blank">
+		<i class="fa fa-github-alt"></i>
+		</a>
+
+	<a>
+	<div class="titles fadeInUp">
+		<h3>
+			<script language="JavaScript">
+			<!--
+			var r_text = new Array ();
+			r_text[0] = "there's no god in our world";
+			r_text[1] = "the day will come when the sky will turn bloody";
+			r_text[2] = "very soon the angels will descend from heaven";
+			r_text[3] = "no one escapes the punishment of heaven";
+			r_text[4] = "gl hf";
+			var i = Math.floor(5*Math.random())
+			document.write(r_text[i]);
+			//-->
+			</script>
+		</h3>
+	</div>
+	</a>
+	</div>
 </div>
 </div>
 </div>
