--- a/index.html
+++ b/index.html
@@ -106,7 +106,20 @@ Your browser sucks. Better to upgrade him.
 
 	<a>
 	<div class="titles fadeInUp">
-		<h3>no one escapes the punishment of heaven</h3>
+		<h3>
+			<script language="JavaScript">
+			<!--
+			var r_text = new Array ();
+			r_text[0] = "no one escapes the punishment of heaven";
+			r_text[1] = "the day will come when the sky will turn bloody";
+			r_text[2] = "very soon the angels will descend from heaven";
+			r_text[3] = "there's no god in our world";
+			r_text[4] = "gl hf";
+			var i = Math.floor(5*Math.random())
+			document.write(r_text[i]);
+			//-->
+			</script>
+		</h3>
 	</div>
 	</a>
 	</div>
