--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ Your browser sucks. Better to upgrade him.
 		<a href="http://steamcommunity.com/profiles/76561197962192573" target=_blank"">
 		<i class="fa fa-steam-square"></i>
 		</a>
-		<a href="https://shikimori.org/tajiri/" target="_blank">
-		<i class="fa fa-github-alt"></i>
+		<a href="https://twitter.com/itstajiri" target="_blank">
+		<i class="fa fa-twitter"></i>
 		</a>
 
 	<a>
