--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="js/modernizr.custom.js"></script>
 <script src="js/plugins.min.js"></script>
 <script src="js/main.js"></script>
+<script src="https://kit.fontawesome.com/80f8842c43.js" crossorigin="anonymous"></script>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h1{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h2{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h3{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
@@ -77,31 +78,31 @@ Your browser sucks. Better to upgrade him.
 		<i class=" "></i>
 		</a>
 		<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
-		<i class="fa fa-steam"></i>
+		<i class="fab fa-steam-symbol"></i>
 		</a>
 		<a href="https://www.twitch.tv/xtajiri" target="_blank">
-		<i class="fa fa-twitch"></i>
+		<i class="fab fa-twitch"></i>
 		</a>
 		<a href="https://www.youtube.com/channel/UC-lhxXhWxXI_rurOXpN_17g" target="_blank">
-		<i class="fa fa-youtube"></i>
+		<i class="fab fa-youtube"></i>
 		</a>
-		<a href="https://myanimelist.net/profile/Tajiri" target="_blank">
-		<i class="fa fa-heart-o"></i>
+		<a href="https://twitter.com/itstajiri" target="_blank">
+		<i class="fab fa-twitter"></i>
 		</a>
-	
+			
 	<div class="media fadeInUp">
 	<br>
 		<a href="just a positon, no idea what's wrong with core css" target=_blank"">
 		<i class=" "></i>
 		</a>
 		<a href="https://vk.com/djksflszkjha" id="vk" target="_blank">
-		<i class="fa fa-vk"></i>
+		<i class="fab fa-vk"></i>
 		</a>
 		<a href="http://steamcommunity.com/profiles/76561197962192573" target=_blank"">
-		<i class="fa fa-steam-square"></i>
+		<i class="fab fa-steam"></i>
 		</a>
-		<a href="https://twitter.com/itstajiri" target="_blank">
-		<i class="fa fa-twitter"></i>
+		<a href="https://myanimelist.net/profile/Tajiri" target="_blank">
+		<i class="far fa-calendar-check"></i>
 		</a>
 
 	<a>
