--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Your browser sucks. Better to upgrade him.
 <div class="titles fadeInDown">
 <h1>tajiri</h1>
 </div>
-	<div class="media fadeInDown">
+	<div class="media fadeIn">
 	<a>
 		<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
 		<i class="fab fa-steam-symbol"></i>
@@ -81,16 +81,16 @@ Your browser sucks. Better to upgrade him.
 		<a href="https://www.twitch.tv/xtajiri" target="_blank">
 		<i class="fab fa-twitch"></i>
 		</a>
+		<a href="https://myanimelist.net/profile/Tajiri" target="_blank">
+		<i class="far fa-calendar-check"></i>
+		</a>
 		<a href="https://www.youtube.com/channel/UC-lhxXhWxXI_rurOXpN_17g" target="_blank">
 		<i class="fab fa-youtube"></i>
 		</a>
 		<a href="https://twitter.com/itstajiri" target="_blank">
 		<i class="fab fa-twitter"></i>
 		</a>
-		<a href="https://myanimelist.net/profile/Tajiri" target="_blank">
-		<i class="far fa-calendar-check"></i>
-		</a>
-	<a>
+			<a>
 	<div class="titles fadeInUp">
 		<h3>
 			<script language="JavaScript">
