--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Your browser sucks. Better to upgrade him.
 <div class="titles fadeInDown">
 <h1>tajiri</h1>
 </div>
-	<div class="media fadeIn">
+	<div class="media fadeInUp">
 	<a>
 		<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
 		<i class="fab fa-steam-symbol"></i>
@@ -90,7 +90,8 @@ Your browser sucks. Better to upgrade him.
 		<a href="https://twitter.com/itstajiri" target="_blank">
 		<i class="fab fa-twitter"></i>
 		</a>
-			<a>
+	</div>
+	<a>
 	<div class="titles fadeInUp">
 		<h3>
 			<script language="JavaScript">
@@ -107,7 +108,6 @@ Your browser sucks. Better to upgrade him.
 		</h3>
 	</div>
 	</a>
-	</div>
 </div>
 </div>
 </div>
