--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>tajiri'</title>
 <link href="css/core.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <meta name="yandex-verification" content="e1e012cb54000e9a"/>
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -71,7 +72,12 @@ Your browser sucks. Better to upgrade him.
 <div class="lightbox">
 <div class="awrapper">
 <div class="titles fadeInDown">
-<h1>tajiri</h1>
+<h1>
+<span class="glitch" data-text=" new">
+	newtype
+</span>
+<br><br>
+<span class="code" data-text="test">251019</span>
 </div>
 	<div class="media fadeInUp">
 	<a>
