--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@ Your browser sucks. Better to upgrade him.
 <div class="awrapper">
 <div class="titles fadeInDown">
 <h1>
-<span class="glitch" data-text=" new">
-	newtype
+<span class="glitch" data-text=" tajiri">
+	tajiri
 </span>
-<br><br>
-<span class="code" data-text="test">251019</span>
 </div>
 	<div class="media fadeInUp">
 	<a>
