--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ Your browser sucks. Better to upgrade him.
 <div class="awrapper">
 <div class="titles fadeInDown">
 <h1>
-<span class="glitch" data-text=" tajiri">
-	tajiri
+<span class="glitch" data-text=" new">
+	newtype
 </span>
 </div>
 	<div class="media fadeInUp">
