--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@ Your browser sucks. Better to upgrade him.
 <div class="awrapper">
 <div class="titles fadeInDown">
 <h1>
-<span class="glitch" data-text=" new">
-	newtype
-</span>
+Tajiri
 </div>
 	<div class="media fadeInUp">
 	<a>
