--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>god is a girl</title>
+		<title>tajiri</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="css/core.css">
 		<link rel="stylesheet" href="css/animate.css">
