--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <i class="stop-button fa fa-pause"></i>
 <div class="video-fall"></div>
 <video id="video" preload="auto" autoplay="true" loop="true" muted="muted">
-<source src="https://raw.githubusercontent.com/itstajiri/itstajiri.github.io/master/videos/newvideo.mp4" type="video/mp4"/>
+<source src="https://raw.githubusercontent.com/itstajiri/itstajiri.github.io/master/videos/mnbg.mp4" type="video/mp4"/>
 Your browser sucks. Better to upgrade him.
 </video>
 <canvas class="cover"></canvas>
