--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>+tajiri'</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <link href="css/core.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
 <meta name="yandex-verification" content="e1e012cb54000e9a"/>
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="css/all.min.css" rel="stylesheet">
 <link rel="icon" href="images/1.png" sizes="32x32" />
 <link rel="icon" href="images/1.png" sizes="192x192" />
 <link rel="apple-touch-icon-precomposed" href="images/1.png" />
@@ -19,7 +19,6 @@
 <script src="js/plugins.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/title.js"></script>
-<script src="https://kit.fontawesome.com/80f8842c43.js" crossorigin="anonymous"></script>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h1{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h2{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h3{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
@@ -59,11 +58,11 @@
 <style>body{overflow:hidden}</style>
 <script>disableWheelScroll();</script>
 <div id="star" class="video mask overlay">
-<i class="volume-button fa fa-volume-down"></i>
+<i class="volume-button fas fa-volume-mute"></i>
 <i class="stop-button fa fa-pause"></i>
 <div class="video-fall"></div>
 <video id="video" preload="auto" autoplay="true" loop="true" muted="muted">
-<source src="https://raw.githubusercontent.com/itstajiri/itstajiri.github.io/master/videos/mnbg.mp4" type="video/mp4"/>
+<source src="videos/mnbg.mp4" type="video/mp4"/>
 Your browser sucks. Better to upgrade him.
 </video>
 <canvas class="cover"></canvas>
@@ -91,14 +90,13 @@ Your browser sucks. Better to upgrade him.
 		<a href="https://twitter.com/itstajiri" target="_blank">
 		<i class="fab fa-twitter"></i>
 		</a>
-	<a>
-	<div class="titles fadeInUp">
-		<h3>
-			<script src="js/godisagirl.js"></script>
-		</h3>
-		</div>
-	
+		<a>
+			<div class="fadeInUp">
+				<h3><script src="js/godisagirl.js"></script></h3>
+			</div>
+		</a>
 	</div>
+
 </div>
 </body>
 </html>
