--- a/index.html
+++ b/index.html
@@ -55,48 +55,40 @@
 	</script>
 </head>
 <body onmousedown="return false" onselectstart="return false">
-<style>body{overflow:hidden}</style>
-<script>disableWheelScroll();</script>
-<div id="star" class="video mask overlay">
-<i class="volume-button fas fa-volume-mute"></i>
-<i class="stop-button fa fa-pause"></i>
-<div class="video-fall"></div>
-<video id="video" preload="auto" autoplay="true" loop="true" muted="muted">
-<source src="videos/mnbg.mp4" type="video/mp4"/>
-Your browser sucks. Better to upgrade him.
-</video>
-<canvas class="cover"></canvas>
-</div>
-<div class="pageoverlay">
-<div class="lightbox">
-<div class="awrapper">
-<div class="titles fadeInDown">
-<h1>tajiri</h1>
-</div>
-	<div class="media fadeInUp">
-	<a>
-		<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank"">
-		<i class="fab fa-steam-symbol"></i>
-		</a>
-		<a href="https://www.twitch.tv/xtajiri" target="_blank">
-		<i class="fab fa-twitch"></i>
-		</a>
-		<a href="https://myanimelist.net/profile/Tajiri" target="_blank">
-		<i class="far fa-calendar-check"></i>
-		</a>
-		<a href="https://www.youtube.com/channel/UC-lhxXhWxXI_rurOXpN_17g" target="_blank">
-		<i class="fab fa-youtube"></i>
-		</a>
-		<a href="https://twitter.com/itstajiri" target="_blank">
-		<i class="fab fa-twitter"></i>
-		</a>
-		<a>
-			<div class="fadeInUp">
-				<h3><script src="js/godisagirl.js"></script></h3>
-			</div>
-		</a>
+	<style>body{overflow:hidden}</style>
+	<script>disableWheelScroll();</script>
+	<div id="star" class="video mask overlay">
+		<i class="volume-button fas fa-volume-mute"></i>
+		<i class="stop-button fa fa-pause"></i>
+		<div class="video-fall"></div>
+		<video id="video" preload="auto" autoplay="true" loop="true" muted="muted">
+			<source src="videos/mnbg.mp4" type="video/mp4"/>
+				Your browser sucks. Better to upgrade him.
+		</video>
+		<canvas class="cover"></canvas>
 	</div>
-
-</div>
+	<div class="pageoverlay">
+		<div class="lightbox">
+			<div class="awrapper">
+				<div class="titles fadeInDown">
+					<h1>tajiri</h1>
+				</div>
+				<div class="media fadeInUp">
+					<a>
+						<a href="http://steamcommunity.com/profiles/76561198091000829" target=_blank""><i class="fab fa-steam-symbol"></i></a>
+						<a href="https://www.twitch.tv/xtajiri" target="_blank"><i class="fab fa-twitch"></i></a>
+						<a href="https://myanimelist.net/profile/Tajiri" target="_blank"><i class="far fa-calendar-check"></i></a>
+						<a href="https://www.youtube.com/channel/UC-lhxXhWxXI_rurOXpN_17g" target="_blank"><i class="fab fa-youtube"></i></a>
+						<a href="https://twitter.com/itstajiri" target="_blank"><i class="fab fa-twitter"></i></a>
+					</a>	
+					<a>
+						<div class="fadeInUp">
+							<h3><script src="js/godisagirl.js"></script></h3>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>	
+	</div>
 </body>
 </html>
