--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>+tajiri'</title>
+<title>'tajiri-</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link href="css/core.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
@@ -58,8 +58,8 @@
 	<style>body{overflow:hidden}</style>
 	<script>disableWheelScroll();</script>
 	<div id="star" class="video mask overlay">
-		<i class="volume-button fas fa-volume-mute"></i>
 		<i class="stop-button fa fa-pause"></i>
+		<i class="volume-button fas fa-volume-mute"></i>
 		<div class="video-fall"></div>
 		<video id="video" preload="auto" autoplay="true" loop="true" muted="muted">
 			<source src="videos/mnbg.mp4" type="video/mp4"/>
