--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>'tajiri-</title>
+<title>+tajiri'</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link href="css/core.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
 <meta name="yandex-verification" content="e1e012cb54000e9a"/>
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link href="css/all.min.css" rel="stylesheet">
-<link rel="icon" href="images/1.png" sizes="32x32" />
-<link rel="icon" href="images/1.png" sizes="192x192" />
-<link rel="apple-touch-icon-precomposed" href="images/1.png" />
-<meta name="msapplication-TileImage" content="images/1.png" />
+<link rel="icon" href="img/1.png" sizes="32x32" />
+<link rel="icon" href="img/1.png" sizes="192x192" />
+<link rel="apple-touch-icon-precomposed" href="img/1.png" />
+<meta name="msapplication-TileImage" content="img/1.png" />
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/modernizr.custom.js"></script>
