--- a/index.html
+++ b/index.html
@@ -2,27 +2,34 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+
 <title>+tajiri'</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+
+<meta name="yandex-verification" content="e1e012cb54000e9a"/>
+
+<link href="css/style.css" rel="stylesheet" type="text/css">
 <link href="css/core.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
-<meta name="yandex-verification" content="e1e012cb54000e9a"/>
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link href="css/all.min.css" rel="stylesheet">
+
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="img/1.png" sizes="32x32" />
 <link rel="icon" href="img/1.png" sizes="192x192" />
 <link rel="apple-touch-icon-precomposed" href="img/1.png" />
 <meta name="msapplication-TileImage" content="img/1.png" />
+
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/modernizr.custom.js"></script>
 <script src="js/plugins.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/title.js"></script>
+
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h1{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h2{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h3{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
 <style>@font-face{font-family:Pompadur;src:url(fonts/font.eot);src:local(pompadur),url(fonts/font.ttf);}h4{font-family:Pompadur,'Comic Sans MS',cursive;}</style>
+	
 	<script> 
 		document.onkeydown = function(e) { 
 		if (e.ctrlKey && (e.keyCode === 67 || e.keyCode === 86 || e.keyCode === 85 || e.keyCode === 117)) {//Alt+c, Alt+v will also be disabled sadly. 
@@ -53,7 +60,9 @@
 		}
 		disableWheelScroll();
 	</script>
+	
 </head>
+
 <body onmousedown="return false" onselectstart="return false">
 	<style>body{overflow:hidden}</style>
 	<script>disableWheelScroll();</script>
