--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>+tajiri'</title>
+<title>'tajiri-</title>
 
 <meta name="yandex-verification" content="e1e012cb54000e9a"/>
 
